Most stuff the same

--- a/google.html
+++ b/google.html
@@ -8,8 +8,8 @@
 
   <body>
     <div><!--Main thing-->
-      <div id="logo">
-        <img src="google_logo.png" />
+      <div id="top">
+        <img src="google_logo.png" id="logo"/>
       </div>
       <div id="search">
         <form>
@@ -17,10 +17,21 @@
         </form>
       </div>
       <div id="buttons">
-        <p>Google Search</p>
-        <p>Google Search</p>
+        <p class="searchbutton">Google Search</p>
+        <p class="searchbutton">I'm Feeling Lucky</p>
+    </div>
+    <div id="bottom">
+      <div id="lefttriplet">
+        <p class="bottomlinkleft">Advertising</p>
+        <p class="bottomlinkleft">Business</p>
+        <p class="bottomlinkleft">About</p>
+      </div>
+      <div id="righttriplet">
+        <p class="bottomlinkright">Privacy</p>
+        <p class="bottomlinkright">Terms</p>
+        <p class="bottomlinkright">Settings</p>
       </div>
     </div>
   </body>
-  
+
 </html>
